--- a/README
+++ b/README
@@ -7,6 +7,17 @@ How to use this program.
 
 Download subtitles:
 $ perl subdb.pl <movie>
+This downloads a subtitle in portuguese or english (these languages are the default ones. To know how to define your language, please check the next example)
+
+
+Download subtitles for some specific language:
+$ perl --lang pt <movie>
+
+or you can define some order in the languages you want:
+
+$ perl --lang pt --lang en --lang fr <movie>
+This will try to download the subtitles in portuguese. If there's no portuguese subtitles it will then try to download an english one. Finally if there is none in english it will then try to download a french one. If there is no subtitle in portuguese, english or french no subtitle is downloaded.
+
 
 Upload subtitles:
 $ perl subdb.pl <subtitles>
