--- a/README
+++ b/README
@@ -18,8 +18,11 @@ or you can define some order in the languages you want:
 $ perl subdb.pl --lang pt --lang en --lang fr <movie>
 This will try to download the subtitles in portuguese. If there's no portuguese subtitles it will then try to download an english one. Finally if there is none in english it will then try to download a french one. If there is no subtitle in portuguese, english or french no subtitle is downloaded.
 
-to use your own default languages, put this in your .bashrc:
-export SUBDB_LANGS="en bg"
+To use your own default languages define the variable SUDBB_LANGS. 
+On linux with bash, put this in your .bashrc: export SUBDB_LANGS="en bg"
+On a windows system please look on the link http://support2.microsoft.com/kb/310519 to know how to define a environment variable
+
+
 
 Upload subtitles:
 $ perl subdb.pl <subtitles>
